fixed border on keypad to be visiable on mobile view

--- a/src/styles/Keypad.css
+++ b/src/styles/Keypad.css
@@ -20,7 +20,7 @@
 	height: 80px;
 	flex-grow: 1;
 	cursor: pointer;
-	box-shadow: 0 0 0.5px 0 #000;
+	box-shadow: 0 0 1px 0 #000;
 }
 .input {
 	composes: btn;
